fix: macro editor overflow

--- a/packages/uhk-web/src/app/components/macro/item/macro-item.component.scss
+++ b/packages/uhk-web/src/app/components/macro/item/macro-item.component.scss
@@ -1,7 +1,6 @@
 @import '../../../../styles/variables';
 
 :host {
-    overflow: hidden;
     display: block;
 
     &.macro-item:first-of-type {
